test/scc/decl/semantic-errors/045.t
void test(inline int a)
{
}